--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,44 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.LoginActivity">
-    <EditText
-        android:id="@+id/loginUserEmail_Et"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/loginUserEmail"
-        android:inputType="textPersonName"
-        android:padding="12dp"/>
 
-    <EditText
-        android:id="@+id/loginUserPassword_Et"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/loginUserEmail_Et"
-        android:layout_marginTop="10dp"
-        android:hint="@string/loginUserPassword"
-        android:inputType="textPassword"
-        android:padding="12dp"/>
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/loginLogin_Btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/loginUserPassword_Et"
-        android:layout_marginTop="10dp"
-        android:text="@string/loginLoginBtn"
-        android:padding="16dp"/>
+        <EditText
+            android:id="@+id/loginUserEmail_Et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/loginUserEmail"
+            android:inputType="textPersonName"
+            android:padding="12dp" />
 
-    <Button
-        android:id="@+id/loginGoRegister_Btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/loginLogin_Btn"
-        android:layout_marginTop="10dp"
-        android:text="@string/loginGoRegister"
-        android:padding="16dp"/>
+        <EditText
+            android:id="@+id/loginUserPassword_Et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/loginUserEmail_Et"
+            android:layout_marginTop="10dp"
+            android:hint="@string/loginUserPassword"
+            android:inputType="textPassword"
+            android:padding="12dp" />
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/loginLogin_Btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/loginUserPassword_Et"
+            android:layout_marginTop="10dp"
+            android:padding="16dp"
+            android:text="@string/loginLoginBtn" />
+
+        <Button
+            android:id="@+id/loginGoRegister_Btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/loginLogin_Btn"
+            android:layout_marginTop="10dp"
+            android:padding="16dp"
+            android:text="@string/loginGoRegister" />
+
+
+    </RelativeLayout>
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/navigation" />
+
+
+</android.support.constraint.ConstraintLayout>
