--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -55,22 +55,24 @@
                 android:id="@+id/userProfile_anketlerim_tv"
                 android:layout_width="match_parent"
                 android:layout_height="34dp"
-                android:layout_margin="30dp"
+                android:layout_margin="10dp"
                 android:gravity="center"
                 android:text="@string/userProfile_anketlerim_tv" />
 
             <ListView
                 android:id="@+id/userProfie_anketlerim_lv"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 android:paddingLeft="15dp"
-                android:paddingRight="15dp" />
+                android:paddingRight="15dp"
+                android:scrollbars="horizontal" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="15dp">
+                android:padding="15dp"
+                android:visibility="visible">
 
                 <Button
                     android:id="@+id/userProfile_sence_btn"
