--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,65 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="10dp"
     tools:context=".activities.LoginActivity">
 
-    <RelativeLayout
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:src="@drawable/logo" />
+
+    <EditText
+        android:id="@+id/loginEmail_Et"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <EditText
-            android:id="@+id/loginUserEmail_Et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/loginUserEmail"
-            android:inputType="textPersonName"
-            android:padding="12dp" />
-
-        <EditText
-            android:id="@+id/loginUserPassword_Et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/loginUserEmail_Et"
-            android:layout_marginTop="10dp"
-            android:hint="@string/loginUserPassword"
-            android:inputType="textPassword"
-            android:padding="12dp" />
-
-        <Button
-            android:id="@+id/loginLogin_Btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/loginUserPassword_Et"
-            android:layout_marginTop="10dp"
-            android:padding="16dp"
-            android:text="@string/loginLoginBtn" />
-
-        <Button
-            android:id="@+id/loginGoRegister_Btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/loginLogin_Btn"
-            android:layout_marginTop="10dp"
-            android:padding="16dp"
-            android:text="@string/loginGoRegister" />
-
-
-    </RelativeLayout>
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
+        android:layout_marginTop="15dp"
+        android:background="@drawable/edittext_background"
+        android:hint="@string/loginEmail"
+        android:inputType="textEmailAddress"
+        android:padding="10dp" />
 
+    <EditText
+        android:id="@+id/loginPassword_Et"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/edittext_background"
+        android:hint="@string/loginPassword"
+        android:inputType="textPassword"
+        android:padding="10dp" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/loginBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/button_background"
+        android:text="@string/loginBtn"
+        android:textColor="@color/colorPrimary" />
+
+    <TextView
+        android:id="@+id/loginRegister_Tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/loginRegister" />
+
+</LinearLayout>
