--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ProfileActivity">
+    tools:context=".fragments.ProfileFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -44,10 +44,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Takipçiler"
+                    android:background="@color/profileNumber_Btn"
                     android:textAllCaps="false"
                     android:textColor="@android:color/black"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    tools:text="@string/followers_Btn" />
 
                 <Button
                     android:id="@+id/followed_Btn"
@@ -55,9 +56,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Takip Ettikleri"
+                    android:background="@color/profileNumber_Btn"
+                    android:textAllCaps="false"
                     android:textColor="@android:color/black"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    tools:text="@string/followed_Btn" />
             </LinearLayout>
         </LinearLayout>
 
@@ -74,20 +77,22 @@
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/ongoingPoll_Tv"
-                    android:layout_width="match_parent"
+                <Button
+                    android:id="@+id/ongoingPoll_Btn"
+                    style="?android:attr/buttonBarStyle"
+                    android:layout_width="341dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Oylaması devam eden anketleri"
-                    android:textSize="20sp" />
+                    android:background="@color/profile_Btn"
+                    tools:text="@string/ongoingPoll_Btn" />
 
                 <Button
                     android:id="@+id/numberOngoingPoll_Btn"
+                    style="?android:attr/buttonBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="1" />
+                    android:background="@color/profileNumber_Btn" />
 
             </LinearLayout>
 
@@ -97,20 +102,23 @@
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/completedPoll_Tv"
-                    android:layout_width="match_parent"
+                <Button
+                    android:id="@+id/completedPoll_Btn"
+                    style="?android:attr/buttonBarStyle"
+                    android:layout_width="341dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Oylaması biten anketleri"
-                    android:textSize="20sp" />
+                    android:background="@color/profile_Btn"
+                    android:elevation="0dp"
+                    tools:text="@string/completedPoll_Btn" />
 
                 <Button
                     android:id="@+id/numberCompletedPoll_Btn"
+                    style="?android:attr/buttonBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="1" />
+                    android:background="@color/profileNumber_Btn" />
 
             </LinearLayout>
 
@@ -120,36 +128,28 @@
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/votedPoll_Tv"
-                    android:layout_width="match_parent"
+                <Button
+                    android:id="@+id/votedPoll_Btn"
+                    style="?android:attr/buttonBarStyle"
+                    android:layout_width="341dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Oyladığı anketler"
-                    android:textSize="20sp" />
+                    android:background="@color/profile_Btn"
+                    android:clickable="false"
+                    tools:text="@string/votedPoll_Btn" />
 
                 <Button
                     android:id="@+id/numberVotedPoll_Btn"
+                    style="?android:attr/buttonBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="1" />
+                    android:background="@color/profileNumber_Btn" />
 
             </LinearLayout>
         </LinearLayout>
 
     </RelativeLayout>
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
