Profil düzenleme,Sence ve Bence fragmentları oluşturuldu

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorPrimaryDark">#393739</color>
     <color name="colorAccent">#C3BEC0</color>
     <color name="colorBlack">#000000</color>
-</resources>
+      <color name="editProfileColor">#DADADA</color>
+  </resources>
