--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -12,9 +12,32 @@
 
         <LinearLayout
             android:id="@+id/LinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/userProfile_userImage"
+                android:layout_width="108dp"
+                android:layout_height="93dp"
+                android:src="@drawable/ic_account_circle_black_24dp"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/userProfile_kullaniciAdi_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Kullanıcı Ad Soyad" />
+
+            <Button
+                android:id="@+id/userProfile_profilDuzenlbtn"
+                android:layout_width="match_parent"
+                android:layout_height="34dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@color/editProfileColor"
+                android:text="@string/userProfile_profilDuzenle" />
 
             <LinearLayout
                 android:id="@+id/userProfile_ly"
@@ -23,32 +46,25 @@
                 android:layout_marginTop="15dp"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/userProfile_userImage"
-                    android:layout_width="133dp"
-                    android:layout_height="match_parent"
-                    android:padding="15dp"
-                    android:src="@drawable/ic_account_circle_black_24dp" />
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
+                    android:background="@color/editProfileColor"
+                    android:text="@string/userProfile_takipci" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="30dp">
-
-                    <TextView
-                        android:id="@+id/userProfile_kullaniciAdi_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Kullanıcı Ad Soyad" />
-
-                    <Button
-                        android:id="@+id/userProfile_profilDuzenlbtn"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/userProfile_profilDuzenle" />
-                </LinearLayout>
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_weight="1"
+                    android:background="@color/editProfileColor"
+                    android:text="@string/userProfile_takipEttiklerim" />
             </LinearLayout>
 
             <TextView
@@ -62,7 +78,8 @@
             <ListView
                 android:id="@+id/userProfie_anketlerim_lv"
                 android:layout_width="wrap_content"
-                android:layout_height="200dp"
+                android:layout_height="215dp"
+                android:layout_marginBottom="10dp"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:scrollbars="horizontal" />
@@ -71,21 +88,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="15dp"
                 android:visibility="visible">
 
                 <Button
                     android:id="@+id/userProfile_sence_btn"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
+                    android:background="@color/editProfileColor"
                     android:text="Sence?" />
 
                 <Button
                     android:id="@+id/userProfile_bence_btn"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
+                    android:background="@color/editProfileColor"
                     android:text="BENCE?" />
             </LinearLayout>
 
