--- a/app/src/main/res/layout/user_profile_survey_row.xml
+++ b/app/src/main/res/layout/user_profile_survey_row.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +23,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="67dp"
+            android:layout_height="50dp"
             android:layout_margin="10dp"
             android:gravity="center"
             android:orientation="horizontal">
@@ -30,17 +31,14 @@
             <ImageView
                 android:id="@+id/userProfileSurvey_image1_iv"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_menu_gallery" />
 
             <ImageView
                 android:id="@+id/userProfileSurvey_image2_iv"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
                 app:srcCompat="@drawable/ic_menu_gallery" />
         </LinearLayout>
 
@@ -74,7 +72,7 @@
 
             <TextView
                 android:id="@+id/userProfileSurvey_kategori_tv"
-                android:layout_width="wrap_content"
+                android:layout_width="199dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
