--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -46,6 +46,7 @@
                     android:layout_weight="1"
                     android:background="@color/profileNumber_Btn"
                     android:textAllCaps="false"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
                     android:textColor="@android:color/black"
                     android:textSize="14sp"
                     tools:text="@string/followers_Btn" />
