--- a/app/src/main/res/layout/fragment_user_profile_following.xml
+++ b/app/src/main/res/layout/fragment_user_profile_following.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".fragments.UserProfileFollowingFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/followingList_lv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
