--- a/app/src/main/res/layout/fragment_user_profile_following.xml
+++ b/app/src/main/res/layout/fragment_user_profile_following.xml
@@ -5,8 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".fragments.UserProfileFollowingFragment">
 
-    <ListView
-        android:id="@+id/followingList_lv"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
+
 </FrameLayout>
