Yanlış çalışan kısımlar için düzenleme yapıldı.

--- a/app/src/main/res/layout/activity_survey.xml
+++ b/app/src/main/res/layout/activity_survey.xml
@@ -70,6 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
+                android:layout_weight="@integer/google_play_services_version"
                 android:padding="8dp"
                 android:scaleType="centerInside"
                 android:src="@mipmap/ic_launcher" />
@@ -79,6 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
+                android:layout_weight="@integer/google_play_services_version"
                 android:padding="8dp"
                 android:scaleType="centerInside"
                 android:src="@mipmap/ic_launcher" />
@@ -87,7 +89,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="15dp">
 
             <TextView
                 android:id="@+id/surveyCategory_Tv"
@@ -108,7 +111,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="15dp">
 
             <TextView
                 android:id="@+id/surveyTime_Tv"
