--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -43,24 +43,26 @@
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="8dp"
                     android:layout_weight="1"
-                    android:background="@color/profileNumber_Btn"
+                    android:background="@color/profile_Btn"
+                    android:text="@string/followers_Btn"
                     android:textAllCaps="false"
                     android:textColor="@android:color/black"
-                    android:textSize="14sp"
-                    tools:text="@string/followers_Btn" />
+                    android:textSize="14sp" />
 
                 <Button
                     android:id="@+id/followed_Btn"
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
                     android:layout_weight="1"
-                    android:background="@color/profileNumber_Btn"
+                    android:background="@color/profile_Btn"
+                    android:text="@string/followed_Btn"
                     android:textAllCaps="false"
                     android:textColor="@android:color/black"
-                    android:textSize="14sp"
-                    tools:text="@string/followed_Btn" />
+                    android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -82,15 +84,18 @@
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="341dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:background="@color/profile_Btn"
-                    tools:text="@string/ongoingPoll_Btn" />
+                    android:text="@string/ongoingPoll_Btn"
+                    tools:layout_marginLeft="0dp" />
 
                 <Button
                     android:id="@+id/numberOngoingPoll_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:background="@color/profileNumber_Btn" />
 
@@ -107,16 +112,18 @@
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="341dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:background="@color/profile_Btn"
                     android:elevation="0dp"
-                    tools:text="@string/completedPoll_Btn" />
+                    android:text="@string/completedPoll_Btn" />
 
                 <Button
                     android:id="@+id/numberCompletedPoll_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:background="@color/profileNumber_Btn" />
 
@@ -133,19 +140,21 @@
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="341dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:background="@color/profile_Btn"
                     android:clickable="false"
-                    tools:text="@string/votedPoll_Btn" />
+                    android:text="@string/votedPoll_Btn" />
 
                 <Button
                     android:id="@+id/numberVotedPoll_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
-                    android:clickable="false"
-                    android:background="@color/profileNumber_Btn" />
+                    android:background="@color/profileNumber_Btn"
+                    android:clickable="false" />
 
             </LinearLayout>
         </LinearLayout>
