--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -12,14 +12,8 @@
         android:layout_margin="10dp"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/editProfile_back_btn"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_keyboard_backspace" />
-
         <ImageView
-            android:id="@+id/editProfile_profilePhoto_iv"
+            android:id="@+id/editUserImage_Iv"
             android:layout_width="match_parent"
             android:layout_height="186dp"
             android:paddingTop="20dp"
@@ -27,7 +21,7 @@
             android:src="@drawable/ic_account_circle_black_24dp" />
 
         <EditText
-            android:id="@+id/editProfile_username_et"
+            android:id="@+id/editUserName_Et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -35,42 +29,27 @@
             android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/editProfile_name_et"
+            android:id="@+id/editFullName_Et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/editName"
             android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/editProfile_surname_et"
+        <Switch
+            android:text="@string/editOpen"
+            android:id="@+id/editIsOpen_Sw"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/editSurname"
-            android:inputType="textPersonName" />
-
-        <EditText
-            android:id="@+id/editProfile_eposta_et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/editEmail"
-            android:inputType="textEmailAddress" />
-
-        <EditText
-            android:id="@+id/editProfile_phone_et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/editPhone"
-            android:inputType="phone" />
+            android:layout_height="40dp"/>
 
         <Button
-            android:id="@+id/editProfile_edit_btn"
+            android:id="@+id/editProfile_Btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/profile_Btn"
             android:text="@string/editButton" />
+
     </LinearLayout>
 </FrameLayout>
