--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -8,14 +8,14 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/image_profile"
+        android:id="@+id/imageProfile_Iv"
         android:src="@mipmap/ic_launcher"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/image_profile"
-        android:layout_toEndOf="@id/image_profile"
+        android:layout_toRightOf="@id/imageProfile_Iv"
+        android:layout_toEndOf="@id/imageProfile_Iv"
         android:layout_marginLeft="5dp"
         android:layout_centerVertical="true"
         android:orientation="vertical"
@@ -25,17 +25,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="username"
-            android:id="@+id/username"
+            android:id="@+id/userName_Tv"
             android:maxLines="1"
             android:textStyle="bold"
             android:textColor="@color/colorPrimaryDark"/>
 
         <TextView
+            android:id="@+id/fullName_Tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/fullname"
             android:maxLines="1"
-            android:text="Full Name"/>
+            android:text="Full Name" />
 
     </LinearLayout>
 
@@ -44,7 +44,7 @@
         android:layout_height="30dp"
         android:background="@drawable/button_background"
         android:visibility="gone"
-        android:id="@+id/btn_follow"
+        android:id="@+id/follow_Btn"
         android:textColor="@color/colorPrimary"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
